+- Update kdb to 2.6.5-kdb-v4.3-{common-2,i386-1,ia64-040413-1}. +  dump() must be called after kdb, not before. +  Use the current version of sn_serial.c.
suse-commit: da40e6c5b4fa874cb6e2f0ede531d355521e8c48

--- a/arch/i386/kdb/ChangeLog
+++ b/arch/i386/kdb/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-05 Keith Owens  <kaos@sgi.com>
+
+	* kdb v4.3-2.6-5-i386-1.
+
+2004-02-29 Keith Owens  <kaos@sgi.com>
+
+	* kdb v4.3-2.6-4-rc1-i386-1.
+
 2004-02-18 Keith Owens  <kaos@sgi.com>
 
 	* kdb v4.3-2.6-3-i386-1.
