Update kdb patches.
suse-commit: a2705d0d16dd1dc2d980190bb4a4140289783044

--- a/arch/i386/kdb/ChangeLog
+++ b/arch/i386/kdb/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-18 Keith Owens  <kaos@sgi.com>
+
+	* kdb v4.4-2.6.16-rc1-i386-1.
+
 2006-01-08 Keith Owens  <kaos@sgi.com>
 
 	* Add DIE_KDEBUG_ENTER and DIE_KDEBUG_LEAVE to notify_die.
