--- a/arch/i386/kdb/ChangeLog
+++ b/arch/i386/kdb/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-06 Keith Owens  <kaos@sgi.com>
+
+	* kdb v4.4-2.6.20-i386-1.
+
 2007-02-01 Keith Owens  <kaos@sgi.com>
 
 	* kdb v4.4-2.6.20-rc7-i386-1.
